Menu Toggle Button on Mobile; Fix bug where it affects the larger viewports too

--- a/css/modules/header.css
+++ b/css/modules/header.css
@@ -93,12 +93,14 @@
 	-webkit-transition: transform 0.4s ease-out;
 	transition: transform 0.4s ease-out 0.01s, opacity 0s;
 }
-.menu-toggle.hide {
-	-webkit-transform: scale(.80) translateY(50px);
-	-moz-transform: scale(.80) translateY(50px);
-	transform: scale(.80) translateY(50px);
-	opacity: 0;
-	transition: transform 0.15s ease-out, opacity 0s 0.15s;
+@media( max-width: 640px )  {
+	.menu-toggle.hide {
+		-webkit-transform: scale(.80) translateY(50px);
+		-moz-transform: scale(.80) translateY(50px);
+		transform: scale(.80) translateY(50px);
+		opacity: 0;
+		transition: transform 0.15s ease-out, opacity 0s 0.15s;
+	}
 }
 
 .menu-toggle * {
